--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <nav class="header">
           <a class="logos" href="/"> <span class="logo">Web</span> Studio</a>
           <ul class="social-links">
-            <li><a href="" class="link">Студия</a></li>
-            <li>
+            <li class="link-title"><a href="" class="link">Студия</a></li>
+            <li class="link-title">
               <a href="./portfolio.html">Портфолио</a>
             </li>
-            <li><a href="">Контакты</a></li>
+            <li class="link-title"><a href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts">
@@ -42,13 +42,13 @@
       </div>
     </header>
     <main>
-      <section class="conateiner-one">
+      <section class="container-box">
         <h1 class="preview">эффективные решения для вашего бизнеса</h1>
         <a class="button" href="">Заказать услугу</a>
       </section>
-      <section class="conateiner-two">
-        <h2>Преимущества нашей студии</h2>
-        <ul>
+      <section class="container-box">
+        <h2 class="none">Преимущества нашей студии</h2>
+        <ul class="box">
           <li>
             <div class="picture">
               <img src="./images/antenna.svg" alt="Антена" />
@@ -92,9 +92,9 @@
           </li>
         </ul>
       </section>
-      <section class="conateiner-three">
+      <section class="container-box">
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="items-title">
           <li>
             <a href="">
               <img src="./images/comp.jpg" alt="Компьютер" />
@@ -115,116 +115,128 @@
           </li>
         </ul>
       </section>
-      <section class="conateiner-four">
+      <section class="container-box">
         <h2>Наша команда</h2>
         <ul>
-          <li>
+          <li class="meta">
             <img src="./images/jhon.jpg" alt="Фото John Smith" />
             <h3>John Smith</h3>
             <p class="desc">Product Designer</p>
-            <ul>
+            <ul class="socials">
               <li>
-                <a href="https://www.instagram.com/?hl=ru">
+                <a
+                  href="https://www.instagram.com/?hl=ru"
+                  class="socials-title"
+                >
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/" class="socials-title">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="https://twitter.com/explore">
+                <a href="https://twitter.com/explore" class="socials-title">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"></a>
+                <a href="https://www.linkedin.com/" class="socials-title"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
-          <li>
+          <li class="meta">
             <img src="./images/marta.jpg" alt="Фото Marta Stewart" />
             <h3>Marta Stewart</h3>
             <p class="desc">Frontend Developer</p>
-            <ul>
+            <ul class="socials">
               <li>
-                <a href="https://www.instagram.com/?hl=ru">
+                <a
+                  href="https://www.instagram.com/?hl=ru"
+                  class="socials-title"
+                >
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/" class="socials-title">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="https://twitter.com/explore">
+                <a href="https://twitter.com/explore" class="socials-title">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"></a>
+                <a href="https://www.linkedin.com/" class="socials-title"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
-          <li>
+          <li class="meta">
             <img src="./images/robert.jpg" alt="Фото Robert Jakis" />
             <h3>Robert Jakis</h3>
             <p class="desc">Marketing</p>
-            <ul>
+            <ul class="socials">
               <li>
-                <a href="https://www.instagram.com/?hl=ru">
+                <a
+                  href="https://www.instagram.com/?hl=ru"
+                  class="socials-title"
+                >
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/" class="socials-title">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="https://twitter.com/explore">
+                <a href="https://twitter.com/explore" class="socials-title">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"></a>
+                <a href="https://www.linkedin.com/" class="socials-title"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
-          <li>
+          <li class="meta">
             <img src="./images/martin.jpg" alt="Фото Martin Doe" />
             <h3>Martin Doe</h3>
             <p class="desc">UI Designer</p>
-            <ul>
+            <ul class="socials">
               <li>
-                <a href="https://www.instagram.com/?hl=ru">
+                <a
+                  href="https://www.instagram.com/?hl=ru"
+                  class="socials-title"
+                >
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/" class="socials-title">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="https://twitter.com/explore">
+                <a href="https://twitter.com/explore" class="socials-title">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"></a>
+                <a href="https://www.linkedin.com/" class="socials-title"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
         </ul>
       </section>
-      <section class="conateiner-five">
+      <section class="container-box">
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
@@ -260,7 +272,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="/" class="logos-footer"> <span class="logo">Web</span> Studio</a>
       <address>
         <ul class="adress">
