--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,18 @@
   </head>
   <body>
     <header>
-      <nav class="header">
-        <a class="logos" href="/"> <span class="logo">Web</span> Studio</a>
-        <ul class="social-links">
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="" class="link">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-        <ul>
+      <div class="container">
+        <nav class="header">
+          <a class="logos" href="/"> <span class="logo">Web</span> Studio</a>
+          <ul class="social-links">
+            <li class="link-title"><a href="" class="link">Студия</a></li>
+            <li class="link-title">
+              <a href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="link-title"><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts">
           <li>
             <img src="./images/envelope.svg" alt="Конверт" />
             <a class="phone" href="maito:info@defstudio.com"
@@ -35,7 +39,7 @@
             <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
     <main>
       <h1>Портфолио</h1>
