--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </ul>
       </section>
       <section class="container-box">
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="heading">Чем мы занимаемся</h2>
         <ul class="items-title">
           <li>
             <a href="">
@@ -116,120 +116,121 @@
         </ul>
       </section>
       <section class="container-box">
-        <h2>Наша команда</h2>
-        <ul>
-          <li class="meta">
-            <img src="./images/jhon.jpg" alt="Фото John Smith" />
+        <h2 class="heading">Наша команда</h2>
+        <ul class="meta">
+          <li class="holder">
+            <img src="./images/jhon.jpg" alt="Фото John Smith" width="270" />
             <h3>John Smith</h3>
             <p class="desc">Product Designer</p>
             <ul class="socials">
-              <li>
-                <a
-                  href="https://www.instagram.com/?hl=ru"
-                  class="socials-title"
-                >
+              <li class="socials-title">
+                <a href="https://www.instagram.com/?hl=ru">
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
-              <li>
-                <a href="https://www.facebook.com/" class="socials-title">
+              <li class="socials-title">
+                <a href="https://www.facebook.com/">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
-              <li>
-                <a href="https://twitter.com/explore" class="socials-title">
+              <li class="socials-title">
+                <a href="https://twitter.com/explore">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
-              <li>
-                <a href="https://www.linkedin.com/" class="socials-title"></a>
+              <li class="socials-title">
+                <a href="https://www.linkedin.com/"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
-          <li class="meta">
-            <img src="./images/marta.jpg" alt="Фото Marta Stewart" />
+          <li class="holder">
+            <img
+              src="./images/marta.jpg"
+              alt="Фото Marta Stewart"
+              width="270"
+            />
             <h3>Marta Stewart</h3>
             <p class="desc">Frontend Developer</p>
             <ul class="socials">
-              <li>
-                <a
-                  href="https://www.instagram.com/?hl=ru"
-                  class="socials-title"
-                >
+              <li class="socials-title">
+                <a href="https://www.instagram.com/?hl=ru">
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
-              <li>
-                <a href="https://www.facebook.com/" class="socials-title">
+              <li class="socials-title">
+                <a href="https://www.facebook.com/">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
-              <li>
-                <a href="https://twitter.com/explore" class="socials-title">
+              <li class="socials-title">
+                <a href="https://twitter.com/explore">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
-              <li>
-                <a href="https://www.linkedin.com/" class="socials-title"></a>
+              <li class="socials-title">
+                <a href="https://www.linkedin.com/"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
-          <li class="meta">
-            <img src="./images/robert.jpg" alt="Фото Robert Jakis" />
+          <li class="holder">
+            <img
+              src="./images/robert.jpg"
+              alt="Фото Robert Jakis"
+              width="270"
+            />
             <h3>Robert Jakis</h3>
             <p class="desc">Marketing</p>
             <ul class="socials">
-              <li>
-                <a
-                  href="https://www.instagram.com/?hl=ru"
-                  class="socials-title"
-                >
+              <li class="socials-title">
+                <a href="https://www.instagram.com/?hl=ru">
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
-              <li>
-                <a href="https://www.facebook.com/" class="socials-title">
+              <li class="socials-title">
+                <a href="https://www.facebook.com/">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
-              <li>
-                <a href="https://twitter.com/explore" class="socials-title">
+              <li class="socials-title">
+                <a href="https://twitter.com/explore">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
-              <li>
-                <a href="https://www.linkedin.com/" class="socials-title"></a>
+              <li class="socials-title">
+                <a href="https://www.linkedin.com/"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
           </li>
-          <li class="meta">
-            <img src="./images/martin.jpg" alt="Фото Martin Doe" />
+          <li class="holder">
+            <img
+              src="./images/martin.jpg"
+              alt="Фото Martin Doe"
+              width="270"
+              height="260"
+            />
             <h3>Martin Doe</h3>
             <p class="desc">UI Designer</p>
             <ul class="socials">
-              <li>
-                <a
-                  href="https://www.instagram.com/?hl=ru"
-                  class="socials-title"
-                >
+              <li class="socials-title">
+                <a href="https://www.instagram.com/?hl=ru">
                   <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
                 </a>
               </li>
-              <li>
-                <a href="https://www.facebook.com/" class="socials-title">
+              <li class="socials-title">
+                <a href="https://www.facebook.com/">
                   <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
                 </a>
               </li>
-              <li>
-                <a href="https://twitter.com/explore" class="socials-title">
+              <li class="socials-title">
+                <a href="https://twitter.com/explore">
                   <img src="./images/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
-              <li>
-                <a href="https://www.linkedin.com/" class="socials-title"></a>
+              <li class="socials-title">
+                <a href="https://www.linkedin.com/"></a>
                 <img src="./images/linkedln.svg" alt="Логотип линкодин" />
               </li>
             </ul>
@@ -237,34 +238,34 @@
         </ul>
       </section>
       <section class="container-box">
-        <h2>Постоянные клиенты</h2>
-        <ul>
-          <li>
+        <h2 class="heading">Постоянные клиенты</h2>
+        <ul class="list">
+          <li class="list-title">
             <a href="">
               <img src="./images/imag1.svg" alt="Логотип компании партнера" />
             </a>
           </li>
-          <li>
+          <li class="list-title">
             <a href="">
               <img src="./images/imag1.svg" alt="Логотип компании партнера" />
             </a>
           </li>
-          <li>
+          <li class="list-title">
             <a href="">
               <img src="./images/imag1.svg" alt="Логотип компании партнера" />
             </a>
           </li>
-          <li>
+          <li class="list-title">
             <a href="">
               <img src="./images/imag1.svg" alt="Логотип компании партнера" />
             </a>
           </li>
-          <li>
+          <li class="list-title">
             <a href="">
               <img src="./images/imag1.svg" alt="Логотип компании партнера" />
             </a>
           </li>
-          <li>
+          <li class="list-title">
             <a href="">
               <img src="./images/imag1.svg" alt="Логотип компании партнера" />
             </a>
@@ -273,43 +274,49 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="/" class="logos-footer"> <span class="logo">Web</span> Studio</a>
-      <address>
-        <ul class="adress">
-          <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
+      <div class="avatar">
+        <a href="/" class="logos-footer">
+          <span class="logo">Web</span> Studio</a
+        >
+        <address>
+          <ul class="adress">
+            <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
+            <li>
+              <a href="maito:info@defstudio.com" class="mobile"
+                >info@defstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="content">
+        <p class="items">Присоединяйтесь</p>
+        <ul class="content-title">
           <li>
-            <a href="maito:info@defstudio.com" class="mobile"
-              >info@defstudio.com</a
-            >
+            <a href="https://www.instagram.com/?hl=ru">
+              <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+            </a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
+            <a href="https://twitter.com/explore">
+              <img src="./images/twitter.svg" alt="Логотип твиттер"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/">
+              <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.linkedin.com/"></a>
+            <img src="./images/linkedln.svg" alt="Логотип линкодин" />
           </li>
         </ul>
-      </address>
-
-      <p class="items">Присоединяйтесь</p>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com/?hl=ru">
-            <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/">
-            <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/explore">
-            <img src="./images/twitter.svg" alt="Логотип твиттер"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/"></a>
-          <img src="./images/linkedln.svg" alt="Логотип линкодин" />
-        </li>
-      </ul>
+      </div>
       <p class="items">Подпишитесь на рассылку</p>
       <p class="aside">2020 | Developed by GoIT Students</p>
     </footer>
