--- a/portfolio.html
+++ b/portfolio.html
@@ -42,174 +42,127 @@
       </div>
     </header>
     <main>
-      <h1>Портфолио</h1>
-      <ul>
-        <li><a href="" class="title"> Все</a></li>
-        <li><a href="" class="title"> Веб-сайты</a></li>
-        <li><a href="" class="title"> Приложения</a></li>
-        <li><a href="" class="title"> Дизайн</a></li>
-        <li><a href="" class="title"> Маркетинг</a></li>
+      <div class="none"><h1>Портфолио</h1></div>
+      <div class="flex">
+        <ul class="widget">
+        <li class="widget-button"><a href="" class="title"> Все</a></li>
+        <li class="widget-button"><a href="" class="title"> Веб-сайты</a></li>
+        <li class="widget-button"><a href="" class="title"> Приложения</a></li>
+        <li class="widget-button"><a href="" class="title"> Дизайн</a></li>
+        <li class="widget-button"><a href="" class="title"> Маркетинг</a></li>
       </ul>
-      <ul>
-        <li>
+      <ul class="flex-container">
+        <li class="flex-element">
           <a href="">
-            <img
-              src="./images/tehnokryak.jpg"
-              alt="Компьютер с открытой веб-страницей"
-          /></a>
+            <img src="./images/tehnokryak.jpg" alt="Компьютер с открытой веб-страницей" /></a>
           <h2 class="subject">Технокряк</h2>
           <p class="subtitle">Веб-сайт</p>
-          <p class="popup">
-            Технокряк это современная площадка распространения коронавируса.
-            Компании используют эту платформу для цифрового шпионажа и атак на
-            защищённые сервера конкурентов.
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/man.jpg" alt="Баскетболисты борющиеся за мяч" />
           </a>
           <h2 class="subject">Постер New Orlean vs Golden Stars</h2>
           <p class="subtitle">Дизайн</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/fish.jpg" alt="Логотип ресторана Seafood" />
           </a>
           <h2 class="subject">Ресторан Seafood</h2>
           <p class="subtitle">Приложение</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/hp.jpg" alt="Наушники" />
           </a>
           <h2 class="subject">Проект Prime</h2>
           <p class="subtitle">Маркетинг</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/box.jpg" alt="Две коробки на столе" />
           </a>
           <h2 class="subject">Проект Boxes</h2>
           <p class="subtitle">Приложение</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/comp3.jpg" alt="Компьютер" />
           </a>
           <h2 class="subject">Inspiration has no Borders</h2>
           <p class="subtitle">Веб-сайт</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/book.jpg" alt="Развернутая книга на столе" />
           </a>
           <h2 class="subject">Издание Limited Edition</h2>
           <p class="subtitle">Дизайн</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/lab.jpg" alt="Бирка с логотипом Лаб" />
           </a>
           <h2 class="subject">Проект LAB</h2>
           <p class="subtitle">Маркетинг</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
         </li>
-        <li>
+        <li class="flex-element">
           <a href="">
             <img src="./images/laptop.jpg" alt="Ноутбук" />
           </a>
           <h2 class="subject">Growing Business</h2>
           <p class="subtitle">Приложение</p>
-          <p class="popup">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
-            porro. Quidem tenetur similique et aperiam, cum natus accusamus
-            laudantium eius animi distinctio quia quos reprehenderit sapiente.
-            Optio earum ratione soluta?
-          </p>
-        </li>
+        </li></div>
       </ul>
     </main>
     <footer>
-      <a href="/" class="logos-footer"> <span class="logo">Web</span> Studio</a>
-      <address>
-        <ul class="adress">
-          <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
-          <li>
-            <a href="maito:info@defstudio.com" class="mobile"
-              >info@defstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="footer">
+        <div class="avatar">
+          <a href="/" class="logos-footer">
+            <span class="logo">Web</span> Studio</a
+          >
+          <address>
+            <ul class="adress">
+              <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
+              <li>
+                <a href="maito:info@defstudio.com" class="mobile"
+                  >info@defstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="content">
+          <p class="list-items">Присоединяйтесь</p>
+          <ul class="content-title">
+            <li class="socials-title">
+              <a href="https://www.instagram.com/?hl=ru">
+                <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+              </a>
+            </li>
+            <li class="socials-title">
+              <a href="https://twitter.com/explore">
+                <img src="./images/twitter.svg" alt="Логотип твиттер"
+              /></a>
+            </li>
+            <li class="socials-title">
+              <a href="https://www.facebook.com/">
+                <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+              </a>
+            </li>
 
-      <p class="items">Присоединяйтесь</p>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com/?hl=ru">
-            <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/">
-            <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/explore">
-            <img src="./images/twitter.svg" alt="Логотип твиттер"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/"></a>
-          <img src="./images/linkedln.svg" alt="Логотип линкодин" />
-        </li>
-      </ul>
-      <p class="items">Подпишитесь на рассылку</p>
+            <li class="socials-title">
+              <a href="https://www.linkedin.com/"></a>
+              <img src="./images/linkedln.svg" alt="Логотип линкодин" />
+            </li>
+          </ul>
+        </div>
+        <p class="list-items">Подпишитесь на рассылку</p>
+      </div>
       <p class="aside">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
